--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,9 +21,9 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: Docker-react
-          environment_name: Dockerreact-env
-          existing_bucket_name:  elasticbeanstalk-ap-south-1-101225030814
-          region: ap-south-1
+          application_name: Docker
+          environment_name: Docker-env
+          existing_bucket_name:  elasticbeanstalk-us-east-1-101225030814
+          region: us-east-1
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
